src/applications/libguides/custom-styles.scss
/* ... */
// .row {
//     > * {
//         max-width: unset;
//     }
// }
svg {
    vertical-align: unset;
}
.s-lib-box .s-lib-box-title {
    padding: 0;
    background: #fff !important;
    border-bottom: none;
}
#col2 .s-lib-box .s-lib-box-title {
    padding-left: 0;
}

/* legacy, in case a Guides admin forgets they shouldn't use this */
.important-content {
    border: 1px solid $borders;
    padding: 1rem 1rem 1rem 2.8rem;
    margin: 0 0 24px 0;
}
.important-exclamation-content {
    border: 1px solid $borders;
    padding: 1rem 1rem 1rem 5rem;
    background-image: url(https://libapps-au.s3-ap-southeast-2.amazonaws.com/customers/720/images/alert-circle.png);
    background-position: left;
    background-repeat: no-repeat;
    margin: 0;
}

* {
    margin: 0;
    padding: 0;
}

#s-lib-public-main,
#s-lib-bc-list {
    @media screen and (max-width: 790px) {
        padding-left: 16px;
        padding-right: 16px;
    }
}

html,
body {
    font-size: $font-size-m;
    height: 100%;
    margin: 0;
    padding: 0 !important;
    line-height: $line-height-long;
}

body {
    font-family: $font;
    font-weight: 400;
    background: $page-background-color;
    font-style: normal;
    letter-spacing: 0.16px;
    color: $bodyCopy;
    -webkit-font-smoothing: antialiased;
}

h1, .h1, h2, .h2, h3, .h3 {
    margin-bottom: 10px;
}

body h1,
body #s-lg-guide-header-info h1,
body .s-lib-header h1 {
    font-family: Montserrat, $font;
    font-size: $font-size-xxxxl;
    color: $heading;
    font-weight: 500;
    line-height: 1.2;
}

.s-lib-header {
    margin-top: 35px;
}
#s-lib-public-header {
    margin-top: 0;
    height: 0;
    padding-bottom: 0;
}

body h2 {
    font-size: $font-size-xxxl;
    font-family: $font;
    color: $heading;
    font-weight: 500;
    line-height: 1.2;
}

body .s-lib-box-container > div.s-lib-box > h2 {
    font-size: $font-size-xxxl;
    font-family: $font;
    color: $heading;
    font-weight: 500;
    line-height: 1.2;
}
h3,
body h3,
body .s-lib-box-container .s-lib-box-content h3 {
    font-size: $font-size-xxl;
    font-family: $font;
    color: $heading;
    font-weight: 500;
    line-height: 1.2;
    margin-top: 24px;
}
h4,
body h4,
.row #accor h4,
body .s-lib-box-container .s-lib-box-content h4 {
    font-size: $font-size-xl;
    font-family: $font;
    color: $heading;
    font-weight: 500;
    line-height: 1.2;
    margin-top: 24px;
}
h5,
body h5 {
    font-size: $font-size-l;
    font-family: $font;
    color: $heading;
    font-weight: 500;
    line-height: 1.2;
    margin-top: 24px;
}
h6,
body h6 {
    font-size: $font-size-m;
    font-family: $font;
    color: $heading;
    font-weight: 500;
    line-height: 1.2;
    margin-top: 24px;
}

#s-lib-footer-login-link a,
#s-lib-footer-support-link a,
a {
    color: $uqBrandColour;
    text-decoration: underline;
    overflow-wrap: break-word;
    word-wrap: break-word;
    font-weight: 500;
    &:hover,
    &:focus {
        background-color: $uqBrandColour;
        color: #fff;
        text-decoration: underline;
    }
    &.bold {
        font-weight: 500;
        margin-left: 1em;
    }
    &:visited {
        color: $uqBrandColour;
        &:hover {
            color: #fff;
        }
    }
}
p {
    margin-bottom: 24px;
    font-weight: 400;
    padding-bottom: 0;
    color: $bodyCopy;
}

ul.s-lg-guide-list {
    padding-left: 16px;
    li {
        padding-block: 5px;
        border-bottom: none;
        list-style: disc;
    }
}
.s-lib-side-borders {
    border-left: 0;
    border-right: 0;
    padding-left: 0;
    padding-right: 0;
}

body:not(.editmode) {
    .s-lib-box .row #accor {
        border-radius: 0;
        background-image: none;
        h4 a {
            color: $heading !important; // TODO: remove inline style 'color:#51247A;' from toggle opener pon subject guides landing page!!!
        }
        h4 a:hover {
            text-decoration: underline;
            color: $heading;
            background-color: transparent;
        }

        h4 a:focus {
            color: $heading;
            background-color: transparent;
        }
    }

    .uql-grid .s-lib-box-content {
        padding-left: 0;
    }
}

// landing page layout, (two column)
body:not(.editmode):not(.guides_homepage) #s-lg-index-cols {
    margin-left: 0;
    margin-right: 0;
    padding-left: 0.5rem;
    padding-right: 0.5rem;
    #col1,
    #col2 {
        width: auto;
        padding-left: 0;
        padding-right: 0;
        ul,
        ol {
            margin-bottom: $spacing-m;
            margin-top: 0;
            padding-left: unset;
        }
        ol li,
        ul li {
            margin-bottom: $spacing-xs;
        }
        ol li:last-child,
        ul li:last-child {
            margin-bottom: 0;
        }
        ol li > ol,
        ol li > ul,
        ul li > ol,
        ul li > ul {
            margin-bottom: 0;
            margin-top: $spacing-xs;
        }
    }
    #col1 {
        ul,
        ol {
            padding-left: $spacing-m;
        }
    }
}
body:not(.editmode) {
    .container,
    .s-lib-main {
        padding-top: 0;
    }
    @media (min-width: 37.5rem) {
        .container,
        .s-lib-main {
            max-width: none;
        }
    }
}
    @media (min-width: 64rem) {
        body:not(.guides_homepage) #s-lg-index-cols {
            display: grid;
            column-gap: 32px;
            grid-template-columns: 0 1fr 296px;
            padding: 0;
        }
    }
body:not(.editmode) {
    @media (min-width: 64rem) {
        .container,
        .s-lib-main {
            padding-left: 0.75rem;
            padding-right: 0.75rem;
            margin-left: auto;
            margin-right: auto;
            max-width: 71em;
            width: auto;
        }
    }
}
/* ... */

